--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.ui.view.MainFragment">
+        tools:context=".ui.view.MainFragment">
 
         <TextView
             android:id="@+id/labelPhoneContacts"
